# cm4-fan-control-rs

./: .gitignore  Cargo.toml  README.md  install.sh
.cargo/: config
debian/: cm4_fan_control.service
src/: main.rs
