[package]
name = "cm4-fan-control-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cm4_fan_control"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rppal = "0.17.1"
tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros", "signal", "time", "fs", "sync"] }
tokio-util = "0.7.10"
